--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         <img src="images/logo.svg" alt="">
       </div>
       <div class="footer-contact">
-        <a href="#">FAQs</a>
-        <a href="#">Contact us</a>
+        <a href="#" class="contact">FAQs</a>
+        <a href="#" class="contact">Contact us</a>
       </div>
 
       <div class="footer-policy">
